--- a/ADD-NEW/Add.css
+++ b/ADD-NEW/Add.css
@@ -112,12 +112,12 @@ li button{
 	display: none;
 } */
 
- /* .display:not(:last-child){
+ .display:not(:last-child){
 	display: none
-  } */
+  }
 
-  
-  /* .display:not(:nth-child(3n+3)){
+/*   
+  .display:not(:nth-child(3n+3)){
 	display: none;
 }  */
 
@@ -209,7 +209,7 @@ li button{
 
 /* ///////////// spinner/////////////// */
 
-.loading-overlay{
+ .loading-overlay{
 	background-color: black;
 	width: 100%;
 	height: 100%;
@@ -219,7 +219,7 @@ li button{
 	display: none;
 }
 
-.loading:empty {
+ .loading:empty {
 	position: fixed;
 	top: 50%;
 	left: 55%;
