--- a/ADD-NEW/Modules/styles/Dashboard.css
+++ b/ADD-NEW/Modules/styles/Dashboard.css
@@ -214,3 +214,46 @@ table tbody tr:nth-child(even){
 	}
 
 }
+
+
+/* ///////////////////////////Spinner/////////////// */
+
+ .spinner-overlay{
+	/* background-color: rgb(255, 255, 255); */
+	width: 100%;
+	height: 50vh;
+	color: rgb(77, 77, 77);
+	/* display: none; */
+}
+
+.spinner:empty {
+	position: relative;
+	top: 40%;
+	left: 47%;
+	width: 5em;
+	height: 5em;
+	border-right: 4px solid  rgb(53, 53, 53) ;
+	border-left: 4px solid rgb(66, 66, 66) ;
+	border-top: 4px solid rgb(56, 48, 48);
+	border-bottom: 4px solid rgb(207, 205, 205);
+	border-radius: 50px;
+	animation: load 2s infinite linear;
+  /* display: none; */
+  }
+  
+  @keyframes load {
+	0% {
+  transform: rotate(0deg)}
+	
+	100% {
+  transform: rotate(360deg)}
+  }
+
+  @media(max-width:800px) {
+	.spinner:empty {
+	  top: 30%;
+	  left: 43%;
+	  width: 3em;
+	  height: 3em;
+	}
+  }
