--- a/ADD-NEW/Modules/styles/Wallet.css
+++ b/ADD-NEW/Modules/styles/Wallet.css
@@ -179,18 +179,22 @@
      position: fixed;
      z-index: 1;
      top: 200px;
+     width: 30%;
      left: 40%;
      padding:  2em ;
      border-radius: 3px;
  }
  .create-paragraph{
-     text-align: center;
-     font-weight: 700;
-     font-size: 25px;
- 
+    text-align: center;
+    font-weight: 700;
+    font-size: 25px;
  }
  
- .create-wallet-modal label{
+ /* .create-wallet-modal form{
+     display: flex;
+     flex-direction: column;
+ } */
+ /* .create-wallet-modal label{
      display: inline-block;
      float: left;
      clear: left;
@@ -198,29 +202,30 @@
      padding: 0.6em 1em;
      margin-top: 10px;
      
- }
+ } */
  
  .create-wallet-modal input{
      display: inline-block;
-     float: right;
-     padding: 0.6em 2em;
+     width: 80%;
+     height: 30px;
      margin-top: 10px;
-     border-radius: 4px;
+     border-radius: 3px;
      border: 1px solid rgb(182, 182, 182);
      outline: none;
-     
- }
+     -webkit-border-radius: 3px;
+     -moz-border-radius: 3px;
+     -ms-border-radius: 3px;
+     -o-border-radius: 3px;
+}
  
  .create-wallet-modal button{
-     position: relative;
-     /* left: 250px; */
-     float: right;
-     cursor: pointer;
-     margin-top: 15px;
-     width: 30%;
-     border-radius: 4px;
-     border: 1px solid rgb(145, 145, 145);
-     padding: 0.2em 1em;	
+    margin-top: 10px;
+    background-color: rgb(70, 69, 69);
+    color: white;
+    border-radius: 4px;
+    padding: 0.5em 0.7em;
+    cursor: pointer;
+    font-size: 15px;
  }
  
  .create-wallet-modal button:hover{
@@ -304,9 +309,35 @@
  }
  
  @media(max-width:800px){
-     .create-wallet-modal{
-         left: 18%;	
+
+    .create-wallet-modal{
+         margin-left: -120px;
+         width: 50%;
      }
+     /* .create-wallet-modal form{
+        display: flex;
+        flex-direction: column;
+    } */
+
+    .create-wallet-modal input{
+        display: inline-block;
+        width: 100%;
+        height: 25px;
+        border-radius: 3px;
+        border: 1px solid rgb(182, 182, 182);
+        outline: none;
+        -webkit-border-radius: 3px;
+        -moz-border-radius: 3px;
+        -ms-border-radius: 3px;
+        -o-border-radius: 3px;
+   }
+    
+    .create-wallet-modal button{
+       padding: 0.2em 0.4em;
+       font-size: 14px;
+    }
+    
+     
      .fund-wallet-modal{
          width: 50%;
          left: 20%;
@@ -315,16 +346,29 @@
  
  @media(max-width:500px){
      .create-wallet-modal{
-         left: 6%;	
+         margin-top: -100px;
+         width: 60%;	
      }
-     .create-wallet-modal label{
-         float: center;
-         padding: 0.4em;
-     }
-     .create-wallet-modal input{
-         padding: 0.4em;
- 
-     }
+
+
+   .create-wallet-modal input{
+       display: inline-block;
+       width: 100%;
+       height: 25px;
+       /* margin-top: 10px; */
+       border-radius: 3px;
+       border: 1px solid rgb(182, 182, 182);
+       outline: none;
+       -webkit-border-radius: 3px;
+       -moz-border-radius: 3px;
+       -ms-border-radius: 3px;
+       -o-border-radius: 3px;
+  }
+   
+   .create-wallet-modal button{
+      padding: 0.2em 0.4em;
+      font-size: 14px;
+   }
      .fund-wallet-modal{
          width: 60%;
          left: 10%;
@@ -332,28 +376,12 @@
  }
  
  @media(max-width:360px){
-     .create-wallet-modal{
-         left: 0%;
-         top: 10px;	
-     }
-     .create-wallet-modal label{
-         display: inline-block;
-         float: left;
-         clear: left;
-         text-align: right;
-         padding: 0.6em 1em;
-         margin-top: 10px;	
-     }
      
-     .create-wallet-modal input{
-         display: inline-block;
-         float: right;
-         padding: 0.6em 2em;
-         margin-top: 10px;
-         border-radius: 4px;
-         border: 1px solid rgb(182, 182, 182);
-         outline: none;	
-     }
+     .create-wallet-modal{
+        width: 60%;
+    }
+
+
      .fund-wallet-modal{
          width: 60%;
          left: 10%;
