--- a/ADD-NEW/Modules/styles/Wallet.css
+++ b/ADD-NEW/Modules/styles/Wallet.css
@@ -178,7 +178,7 @@
      background-color: rgb(245, 245, 245);
      position: fixed;
      z-index: 1;
-     top: 200px;
+     top: 160px;
      width: 30%;
      left: 40%;
      padding:  2em ;
@@ -203,12 +203,14 @@
      margin-top: 10px;
      
  } */
- 
+
+
  .create-wallet-modal input{
      display: inline-block;
+     padding: 0 0.5em;
      width: 80%;
      height: 30px;
-     margin-top: 10px;
+     margin-bottom: 10px;
      border-radius: 3px;
      border: 1px solid rgb(182, 182, 182);
      outline: none;
@@ -346,6 +348,7 @@
  
  @media(max-width:500px){
      .create-wallet-modal{
+        margin-left: -110px;
          margin-top: -100px;
          width: 60%;	
      }
@@ -378,7 +381,7 @@
  @media(max-width:360px){
      
      .create-wallet-modal{
-        width: 60%;
+        width: 70%;
     }
 
 
