--- a/Airtime.css
+++ b/Airtime.css
@@ -194,10 +194,11 @@ img{
 }
 .div-one{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
     background-color: rgb(230, 224, 224);
+    border: 1px solid black;
 
 }
 
@@ -214,6 +215,26 @@ img{
     border-radius: 6px;
     cursor: pointer;
     border: 0px;
+}
+
+
+.div-two{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+    background-color: rgb(230, 224, 224);
+    border: 1px solid black;
+    width: 100%;
+
+}
+
+ .div-two .right-content{
+    font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 20px;
+    font-stretch: extra-expanded ;
+    border: 1px solid black;
 }
 
 
