--- a/Airtime.css
+++ b/Airtime.css
@@ -1,122 +1,122 @@
 body{
-    margin: 0px auto;   
-    font-family: Arial, Helvetica, sans-serif;
+  margin: 0px auto;   
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .navigation{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .left-nav{
-    font-family: cursive;
-    font-size: 18px;
-    color: rgb(60, 139, 139);
+  font-family: cursive;
+  font-size: 18px;
+  color: rgb(60, 139, 139);
 }
 .disburse{
-    cursor: pointer;
+  cursor: pointer;
 }
 .right-nav{
-    display: flex;
-    justify-content: space-around;
+  display: flex;
+  justify-content: space-around;
 }
 
 .right-nav a{
-    text-decoration: none;
-    margin: 20px;
-    color: black;
-    font-family: Arial, Helvetica, sans-serif;   
+  text-decoration: none;
+  margin: 20px;
+  color: black;
+  font-family: Arial, Helvetica, sans-serif;   
 }
 
 #signup-button{
-    padding: 7px;
-    margin-right: 25px;
-    background-color: rgb(60, 139, 139);
-    color: white;
-    border: 0px;
-    border-radius: 4px;
-    cursor: pointer;
-    outline: white;
+  padding: 7px;
+  margin-right: 25px;
+  background-color: rgb(60, 139, 139);
+  color: white;
+  border: 0px;
+  border-radius: 4px;
+  cursor: pointer;
+  outline: white;
 }
 
 #logout-button{
-    padding: 7px;
-    margin-right: 25px;
-    background-color: rgb(85, 84, 84);
-    color: white;
-    border-radius: 4px;
-    cursor: pointer;
-    outline: none;
+  padding: 7px;
+  margin-right: 25px;
+  background-color: rgb(85, 84, 84);
+  color: white;
+  border-radius: 4px;
+  cursor: pointer;
+  outline: none;
 }
 
 
 
 #login-button{
-    padding: 7px;
-    margin-right: 25px;
-    background-color:  rgb(137, 173, 173);
-    color: white;
-    border: 0px;
-    border-radius: 4px;
-    cursor: pointer;
-    outline: none;
+  padding: 7px;
+  margin-right: 25px;
+  background-color:  rgb(137, 173, 173);
+  color: white;
+  border: 0px;
+  border-radius: 4px;
+  cursor: pointer;
+  outline: none;
 }
 
 .side-menu {
-    height: 80%;
-    width: 0;
-    z-index: 1;
-    top: 0;
-    right: 0;
-    position: fixed;
-    float: right;
-    background-color: rgb(248, 247, 247);
-    overflow-Y: hidden;
-    padding-top: 10px;
-    opacity:1;
-    transition-duration: 0.1s;    
+  height: 80%;
+  width: 0;
+  z-index: 1;
+  top: 0;
+  right: 0;
+  position: fixed;
+  float: right;
+  background-color: rgb(248, 247, 247);
+  overflow-Y: hidden;
+  padding-top: 10px;
+  opacity:1;
+  transition-duration: 0.1s;    
 }
 
 .side{
     text-align: center;   
 }
 .side div{
-    display: grid;
-    width: 120px; 
-    margin:auto; 
+  display: grid;
+  width: 120px; 
+  margin:auto; 
 }
 .side button{
-    margin-top: 15px;
+  margin-top: 15px;
 }
 
 .side-top{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 .side-heading{
-    font-family: cursive;
-    font-size: 18px;
-    color: rgb(60, 139, 139);
+  font-family: cursive;
+  font-size: 18px;
+  color: rgb(60, 139, 139);
 }
 
 #close-menu{
-    background-color: rgb(248, 247, 247);
-    border: 0px;
-    margin-right: 10px;
+  background-color: rgb(248, 247, 247);
+  border: 0px;
+  margin-right: 10px;
 }
 
 
 .side-menu .btn-close{
-    font-size: 30px; 
-    outline: none; 
-    cursor: pointer;  
+  font-size: 30px; 
+  outline: none; 
+  cursor: pointer;  
 }
 
 .side-menu a{
-    padding: 10px 10px 10px 10px;
-    font-size: 20px;
+  padding: 10px 10px 10px 10px;
+  font-size: 20px;
 }
 
 .side a{
@@ -131,26 +131,26 @@ li{
 }
 
 .fa-bars{
-    color: rgb(105, 105, 105);
-    /* border: 2px solid rgb(95, 95, 95); */
-    padding: 5px;
-    /* border-radius: 5px; */
-    margin-right: 20px;   
-    font-size: 25px; 
-    cursor: pointer;
+  color: rgb(105, 105, 105);
+  /* border: 2px solid rgb(95, 95, 95); */
+  padding: 5px;
+  /* border-radius: 5px; */
+  margin-right: 20px;   
+  font-size: 25px; 
+  cursor: pointer;
 }
 .body .login-status{
-    background-color: green;
-    color: white;
-    font-size: 18px;
-    width: 250px;
-    position: fixed;
-    padding-left: 1em;
-    z-index: 100;
-    top: 10px;
-    right: 0;
-    display: none;
-    animation: success 1s;
+  background-color: green;
+  color: white;
+  font-size: 18px;
+  width: 250px;
+  position: fixed;
+  padding-left: 1em;
+  z-index: 100;
+  top: 10px;
+  right: 0;
+  display: none;
+  animation: success 1s;
 }
 /* .body .logout-status{
     background-color: black;
@@ -166,23 +166,23 @@ li{
     animation: success 1s;
 
 } */
- .form .login-error p{
-    background-color: rgb(238, 89, 89);
-    color: white;
-    font-size: 15px;
-    padding: 0.5em;
-    text-align: center;
-    display: none;
-    font-family: Arial, Helvetica, sans-serif;
+.form .login-error p{
+  background-color: rgb(238, 89, 89);
+  color: white;
+  font-size: 15px;
+  padding: 0.5em;
+  text-align: center;
+  display: none;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 @keyframes success{
-    0%{
-        right: -500px;
-    }
-    100%{
-        right: 0px
-    }
+  0%{
+      right: -500px;
+  }
+  100%{
+      right: 0px
+  }
 }
 
 /* .body .login-status:hover{
@@ -193,65 +193,89 @@ img{
     width: 50rem;
 }
 .div-one{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;
-    background-color: rgb(230, 224, 224);
-    border: 1px solid black;
-
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
+  background-color: rgb(247, 247, 247);
+  border: 1px solid black;
 }
+
 
 .left-content{
-    font-size: 30px;
-    font-family: Arial, Helvetica, sans-serif;
-    padding: 20px;
-    font-stretch: extra-expanded ;
+  font-size: 30px;
+  font-family: Arial, Helvetica, sans-serif;
+  padding: 20px;
+  font-stretch: extra-expanded ;
 }
 #get-started{
-    font-size: 15px;
-    padding: 10px 15px 7px 10px; 
-    background-color: rgb(60, 139, 139);
-    color: white;
-    border-radius: 6px;
-    cursor: pointer;
-    border: 0px;
+  font-size: 15px;
+  padding: 10px 15px 7px 10px; 
+  background-color: rgb(60, 139, 139);
+  color: white;
+  border-radius: 6px;
+  cursor: pointer;
+  border: 0px;
 }
 
 
 .div-two{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    flex-wrap: wrap;
-    background-color: rgb(230, 224, 224);
-    border: 1px solid black;
-    width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: wrap;
+  background-color: rgb(255, 255, 255);
+  /* border: 1px solid black; */
+  width: 100%;
+  padding: 2em 0.5em;
+}
 
+
+.div-two .left-content-img img{
+  margin: auto;
+  transform: rotate(-10deg);
+  height: 100%;
+  width: 200px   
 }
 
  .div-two .right-content{
-    font-size: 20px;
-    font-family: Arial, Helvetica, sans-serif;
-    padding: 20px;
-    font-stretch: extra-expanded ;
-    border: 1px solid black;
+  font-size: 20px;
+  font-family: Arial, Helvetica, sans-serif;
+  padding: 20px;
+  font-stretch: extra-expanded ;
+  /* border: 1px solid black; */
 }
 
 .div-three{
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    flex-wrap: flex;
-    padding:  1em 0.5em;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  padding:  3.5em 0.5em;
 }
+
+
 .div-three .each-icon{
-    /* border: 1px solid black; */
-    width: 100%;
     text-align: center;
 }
+
 .div-three .icon{
     text-align:  center;
+}
+
+.div-three .icon i{
+    font-size: 30px;
+    color: rgb(94, 94, 94);
+}
+
+.div-four .note{
+  background-color: rgb(155, 192, 192);
+  padding: 1em;
+  width: 50%;
+  margin: 30px auto;
+  text-align: center;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  color: rgb(46, 46, 46);
 }
 
 /* .logged-in{
@@ -262,29 +286,52 @@ img{
 } */
 
 @media(min-width: 700px) {
-    #icon{
-        display: none;
-    }   
-    .side-menu{
-        display: none;
-    }
+  #icon{
+    display: none;
+  }   
+  .side-menu{
+    display: none;
+  }
 }
 
 
 @media(max-width:700px) {
-    .nav-content{
-        display: none !important; 
-    }
-    
-    img{
-        width: 0rem;
-    }
+  .nav-content{
+    display: none !important; 
+  }
+  img{
+    width: 0rem;
+  }
+
+
+  .div-four .note{
+    width: 70%;
+    margin: 10px auto;
+    text-align: center;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    color: rgb(46, 46, 46);
+  }
+
+
+  .div-two .left-content-img img{
+    margin: auto;
+    transform: rotate(-10deg);
+    height: 100%;
+    width: 100px   
+  }
+  
+}
+
+@media(max-width: 400px){
+  .div-four .note{
+    width: 90%;
+  }
 }
 
 @media(max-width:1100px) and (min-width:750px) {
-    img{
-        width: 20rem;
-    }     
+  img{
+    width: 20rem;
+  }     
 }
 
 
